--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -126,7 +126,7 @@ jobs:
 
       - name: merge into develop
         run: |
-          CURRENT_BRANCH=$(git branch --show-current)
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
           echo $CURRENT_BRANCH;
           git checkout develop;
           git merge $CURRENT_BRANCH;
