--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -1,64 +1,47 @@
-# ESM-Tools merge automation
-# ==========================
-# After a pull request is merged, the following steps are triggered:
-#   1. Bumpversion on the release branch
-#      - if the origin branch name contains "hotfix/" or "fix/" it does "bumpversion patch"
-#      - if the origin branch name contains "feature/" or "feat/" it does "bumpversion minor"
-#      - if the origin branch name contains none of the above runs "bumpversion patch" by default
-#      - if "#patch", "#minor" or "#major" are included in any commit message of the PR, and none
-#        of the above complies, then it uses the specified tag for the version bumping
-#   2. Merges "release" into "develop".
-#
-# Note: the version bumping runs ONLY for pull-requests, pushes direcly on the release branch without
-# pull-requests will not trigger version bumping.
+# ESM-Tools pre-merge automation
+# ==============================
+# In a pull-request, if a comment contains #bump, the following steps are triggered:
+#   1. merges `release` into the PR-branch (updates bumpversion values and makes sure whatever we tag in the next step has everything until that version number)
+#   2. bumps the version according to the PR-branch name (`hotfix/`, `fix/` , `feature/` and `feat/` are understood)
+#   3. merges PR-branch into `develop`
 
-name: merge automation
+name: pre-merge automation
 
-# Controls when the workflow will run
+# Triggers the workflow on an issue comment
 on:
-  # Triggers the workflow on push release branch
   issue_comment:
     types: [created]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a single job called "bump_and_merge2dev"
   bump_and_merge2dev:
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Run this workflow ONLY if the `issue_comment` is in a pull-request and the comment text contains `#bump`
     if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '#bump') }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Sequence of tasks that will be executed as part of the job
     steps:
       
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it (`release` branch)
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
           
-      #- name: cherry pick last bump from release
-      #  run: |
-      #    git log -n 3 --grep="Bump version\:"
-      #    git status;
-      #    git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h";
-      #    ID_LAST_BUMP=$(git log -n 1 -g --grep="Bump version\:" --pretty=format:"%h");
-      #    echo $ID_LAST_BUMP
-        
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          
+      # Set the user to author the git actions of the runner    
       - name: set user
         run: |
           git config --global user.name "${GITHUB_ACTOR}";
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          
+
+      # Checkout PR-branch (I could not find an easier way to do this and it seems
+      # many people are struggling with the same problem when your event is triggered
+      # by `issue_comment`)
       - name: checkout PR origin branch
         run: |
           PR_URL="${{ github.event.issue.pull_request.url }}";
@@ -66,18 +49,21 @@ jobs:
           hub pr checkout $PR_NUM;
           git status
         env:
-          DEFAULT_BRANCH: ${{ github.event.issue.pull_request.head_ref }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+      
+      # Store the branch name under `steps.vars.output.current_branch` variable,
+      # for later use
       - name: Set current_branch var
         id: vars
         run: echo ::set-output name=current_branch::$(git rev-parse --abbrev-ref HEAD)
           
-      - name: merge release into this branch
+      # Merge release into PR-branch    
+      - name: merge release into PR-branch
         run: |
           git status
           git merge release;
-          
+      
+      # Bumping if `hotfix/` or `fix/` is part of the branch's name (patch)
       - name: bump patch
         if: ${{
           contains(steps.vars.outputs.current_branch, 'fix/') &&
@@ -89,6 +75,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
 
+      # Bumping if `feature/` or `feat/` is part of the branch's name (minor)
       - name: bump feature
         if: ${{
           (
@@ -101,7 +88,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: minor
-          
+      
+      # Default bumping (patch unless #minor or #major is used in a comment of the PR)
       - name: bump default
         if: ${{
           !contains(steps.vars.outputs.current_branch, 'feat/') &&
@@ -111,23 +99,14 @@ jobs:
         uses: jaumann/github-bumpversion-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
-
-#      - name: change author
-#        run: |
-#          git log -n 3;
-#          echo $GITHUB_ACTOR
         
+      # Push
       - name: push changes
         run: |
           git push;
           git push --tags
-
-#      - name: Push changes
-#        uses: ad-m/github-push-action@master
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          tags: true
-
+          
+      # Merge PR-branch into `develop`
       - name: merge into develop
         run: |
           echo ${{ steps.vars.outputs.current_branch }};
