--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -27,9 +27,6 @@ jobs:
 
     # Sequence of tasks that will be executed as part of the job
     steps:
-    
-      - name: work around permission issue
-        run: git config --global --add safe.directory /github/workspace
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it (`release` branch)
       - uses: actions/checkout@v2
@@ -76,7 +73,7 @@ jobs:
           !contains(steps.vars.outputs.current_branch, 'feat/') &&
           !contains(steps.vars.outputs.current_branch, 'feature/')
           }}
-        uses: jaumann/github-bumpversion-action@master
+        uses: jasonamyers/github-bumpversion-action@v1.0.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
@@ -91,7 +88,7 @@ jobs:
           ) &&
           !contains(steps.vars.outputs.current_branch, 'fix/')
           }}
-        uses: jaumann/github-bumpversion-action@master
+        uses: jasonamyers/github-bumpversion-action@v1.0.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: minor
@@ -104,7 +101,7 @@ jobs:
           !contains(steps.vars.outputs.current_branch, 'feat/') &&
           !contains(steps.vars.outputs.current_branch, 'feature/')
           }}
-        uses: jaumann/github-bumpversion-action@master
+        uses: jasonamyers/github-bumpversion-action@v1.0.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: major
@@ -117,7 +114,7 @@ jobs:
           !contains(steps.vars.outputs.current_branch, 'fix/') &&
           !contains(github.event.comment.body, '#major')
           }}
-        uses: jaumann/github-bumpversion-action@master
+        uses: jasonamyers/github-bumpversion-action@v1.0.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         
