--- a/.github/workflows/esm_tests_computer_workflow.yml
+++ b/.github/workflows/esm_tests_computer_workflow.yml
@@ -29,8 +29,19 @@ jobs:
     
     - name: dummy action
       run: |
-        echo "hello world! "
+        mdkir output;
+        date >  output/date.md"
     
     - name: commit changes in submodule
       if: contains(${{ inputs.test_flags }}, "-s True")
-      uses: mandresm/merge_bumpversion_automation_submodule@main
+      uses: cpina/github-action-push-to-another-repository@main
+      env:
+         SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+         API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      with:
+         source-directory: 'output'
+         destination-github-username: 'mandresm'
+         destination-repository-name: 'mandresm/merge_bumpversion_automation_submodule'
+         user-email: mandresm@@users.noreply.github.com
+         target-branch: main
+
