--- a/.github/workflows/esm_tests_computer_workflow.yml
+++ b/.github/workflows/esm_tests_computer_workflow.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: dummy action
       run: |
-        mdkir output;
+        mkdir output;
         date >  output/date.md"
     
     - name: commit changes in submodule
