--- a/.github/workflows/esm_tests_computer_workflow.yml
+++ b/.github/workflows/esm_tests_computer_workflow.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         mkdir output;
         date >  output/date.md;
-        cat output/date.md;"
+        cat output/date.md;
     
     - name: commit changes in submodule
       if: contains(${{ inputs.test_flags }}, "-s True")
